# squidpy

./: .bumpversion.cfg  .coveragerc  .cruft.json  .editorconfig  .gitignore  .gitignore.rej  .gitmodules  .mypy.ini  .pre-commit-config.yaml  .pre-commit-config.yaml.rej  .prettierrc.yaml  .readthedocs.yaml  .readthedocs.yml  .rstcheck.cfg  .run_notebooks.py  .run_notebooks.sh  .travis.yml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  README_pypi.rst  _tox.ini  biome.jsonc  hatch.toml  model_testing.ipynb  play.ipynb  pyproject.toml  pyproject.toml.rej  requirements.txt  roadmap.md  setup.py  squidpy_testing.ipynb  tox.ini
.github/: .codecov.yml  PULL_REQUEST_TEMPLATE.md  codecov.yml  release.yml  uv-constraints.txt
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  question.md  question.yml
.github/scripts/: benchmark_report.py
.github/workflows/: benchmark.yaml  benchmark.yml  build.yaml  build.yml  ci.yml  deployment.yml  lint.yml  news.yml  release.yaml  release.yml  test-notebooks.yaml  test-notebooks.yml  test.yaml  test.yml
.scripts/ci/: benchmark_report.py  download_data.py  install_dependencies.sh  run_notebooks.py
benchmarks/: README.md  __init__.py  asv.conf.json  conftest.py  test_co_occurrence.py
benchmarks/benchmarks/: __init__.py  _utils.py  co_occurence.py  preprocessing_co_occurence.py
docs/: Makefile  api.md  api.rst  classes.md  classes.rst  conf.py  conf.py.rej  contributing.md  examples.rst  extensibility.md  index.md  index.rst  installation.md  installation.rst  references.bib  references.md  release_notes.md  release_notes.rst  requirements.txt  tutorials.rst  utils.py
docs/_ext/: typed_returns.py
docs/_templates/: breadcrumbs.html
docs/release/: notes-1.0.0.md  notes-1.0.1.md  notes-1.0.1.rst  notes-1.1.0.md  notes-1.1.0.rst  notes-1.1.1.md  notes-1.1.1.rst  notes-1.1.2.md  notes-1.1.2.rst  notes-1.2.0.md  notes-1.2.0.rst  notes-1.2.1.md  notes-1.2.2.md  notes-1.2.3.md  notes-1.2.3.rst  notes-1.3.0.md  notes-1.3.0.rst  notes-1.3.1.md  notes-1.3.1.rst  notes-1.4.0.md  notes-1.4.0.rst  notes-1.4.1.md  notes-1.4.1.rst  notes-1.5.0.md  notes-1.5.0.rst  notes-1.6.0.md  notes-1.6.0.rst  notes-1.6.1.md  notes-1.6.1.rst  notes-1.6.2.md  notes-1.6.2.rst  notes-dev.md  notes-dev.rst
docs/source/: api.rst  classes.rst  conf.py  create_news_fragment.py  examples.rst  index.rst  installation.rst  latest_additions.rst  references.bib  references.rst  release_notes.rst  spelling_wordlist.txt  tutorials.rst  utils.py
notebooks/: LK_features.ipynb  SpatialClustering.ipynb  Untitled_2021-01-29.ipynb  available_datasets.ipynb  build_spatial_graph.ipynb  centrality_measures.ipynb  co_occurrence_plot.ipynb  create_test_data.ipynb  graph_plotting.ipynb  hs_extract_image_crops.ipynb  hs_extract_image_features_table-multi-threading.ipynb  hs_extract_image_features_table.ipynb  hs_feature_evaluation.ipynb  images_resolution_explained.ipynb  lig_rec_cellphonedb_comparison.ipynb  ligrec_vignette.ipynb  neighbour_plot.ipynb  permutation_test.ipynb  plotting_functions_graph.ipynb  ripley_brainsagittal.ipynb  ripley_lymphnode.ipynb  segmentation_example_stardist.ipynb  segmentation_flourescence.ipynb  seqfish_data.ipynb  tutorial_feature_extraction.ipynb  tutorial_image_cropping.ipynb  tutorial_image_plotting_extract.ipynb  tutorial_image_processing.ipynb  tutorial_image_segmentation.ipynb  tutorial_imagecontainer.ipynb  tutorial_napari.ipynb
plans/: delegate-plots-to-sdata-plot.md
spatial_tools/: __init__.py  _docs.py  utils.py
spatial_tools/graph/: __init__.py  _utils.py  build.py  clustering.py  nhood.py  perm_test.py  plotting.py  ppatterns.py
spatial_tools/image/: __init__.py  _utils.py  crop.py  manipulate.py  object.py  processing.py  segment.py  tools.py
spatial_tools/plotting/: __init__.py  _graph.py  _image.py
spatial_tools/tests/: test_graph_nhood.py  test_image_container.py  test_image_crop.py  test_image_features.py  test_image_object.py  test_img_processing.py  test_ripley.py  test_segmentation.py  test_spatial_connectivity.py
squidpy/: __init__.py  _docs.py  _io.py  _utils.py  model_testing.ipynb  pymc_testing.ipynb  utils.py
squidpy/_constants/: _constants.py  _pkg_constants.py  _utils.py
squidpy/constants/: _constants.py  _pkg_constants.py  _utils.py
squidpy/datasets/: _10x_datasets.py  __init__.py  _dataset.py  _dataset.pyi  _extenddatasets.py  _image.py  _image.pyi  _images.py  _utils.py
squidpy/ext/: _tangram.py
squidpy/gr/: __init__.py  _build.py  _design_matrix.py  _ligrec.py  _nhood.py  _ppatterns.py  _ripley.py  _sepal.py  _utils.py  build.py  nhood.py  ppatterns.py
squidpy/graph/: __init__.py  _ligrec.py  _utils.py  build.py  clustering.py  nhood.py  ppatterns.py
squidpy/im/: __init__.py  _container.py  _coords.py  _feature.py  _feature_mixin.py  _io.py  _process.py  _segment.py  _utils.py  crop.py  feature_mixin.py  features.py  object.py  processing.py  segment.py  tools.py
squidpy/image/: __init__.py  _utils.py  crop.py  object.py  processing.py  segment.py  tools.py
squidpy/pl/: __init__.py  _color_utils.py  _exp_dist.py  _feature_by_dist.py  _graph.py  _image.py  _interactive.py  _ligrec.py  _pl_spatial_de.py  _spatial.py  _spatial_utils.py  _utils.py  _var_by_distance.py  _widgets.py
squidpy/plotting/: __init__.py  _graph.py  _image.py
squidpy/read/: __init__.py  _read.py  _read_visium.py  _utils.py
squidpy/tl/: __init__.py  _exp_dist.py  _spatial_de.py  _var_by_distance.py
src/squidpy/: __init__.py  _compat.py  _docs.py  _utils.py  _validators.py
tests/: conftest.py  test_backends.py  test_gpu.py  test_graph_nhood.py  test_image_crop.py  test_image_features.py  test_image_object.py  test_img_processing.py  test_ripley.py  test_segmentation.py  test_settings.py  test_spatial_connectivity.py  test_validators.py
tests/_data/: feature_df.csv  test_data.h5ad  (+4 more)
tmp/: compute_stalign.ipynb  compute_stalign_affine_vs_full.ipynb  compute_stalign_merfish_affine_only.ipynb  compute_stalign_merfish_full.ipynb  compute_stalign_points.ipynb
(+411 files in other folders)
